Implement Mission 4: Basic UCI / Debug Shell
- Add UCI protocol handler with full test coverage (24 tests)
- REQ-1: UCI handshake (uci, isready, uciok, readyok)
- REQ-2: Position setup (startpos, FEN, moves)
- REQ-3: Debug display (d command with board, FEN, hash)
- REQ-4: Perft command (go perft N with divide output)
- REQ-5: Basic go command (returns first legal move)
- REQ-6: Quit command

- Update main.rs with full UCI loop
- Add bench command for performance testing
- Performance: ~60M nodes/sec in release mode

All 130 workspace tests pass.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     ".",
     "missions/mission2",
     "missions/mission3",
+    "missions/mission4",
 ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
