Mission 8: v0.1.0 Release with Build Timestamp
Features:
- Version info with build timestamp in UCI id output
- Format: 'Prawn v0.1.0 (built YYYY-MM-DD HH:MM:SS UTC)'
- Build script (build.rs) generates timestamp at compile time
- Centralized version constants in lib.rs
- engine_id() function for full identification string

Release Profile Optimizations:
- LTO (Link Time Optimization) enabled
- Single codegen unit for maximum optimization
- Panic = abort for smaller binary

Engine Capabilities:
- Full UCI protocol support
- Alpha-beta search with quiescence
- Iterative deepening with time management
- Transposition table with configurable size
- Move ordering (MVV-LVA, killer moves, history heuristic)
- Null move pruning, LMR, futility pruning
- Comprehensive evaluation (material, PST, pawns, king safety, mobility)

Tournament Results: 1.5/2 vs TSCP 181 (~2200 Elo)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "prawn"
 version = "0.1.0"
 edition = "2021"
+authors = ["MTDuke71"]
+description = "A fast chess engine written in Rust"
+license = "MIT"
+repository = "https://github.com/MTDuke71/prawn"
+build = "build.rs"
 
 [workspace]
 members = [
@@ -16,3 +21,8 @@ members = [
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
